# uv-monorepo

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
